--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
-   
-      <header>
+    <main>
+      <header class="header">
         <nav class="nav">
           <ul>
             <img src="" alt="" />
@@ -22,58 +22,62 @@
           </ul>
         </nav>
       </header>
-      <section class="box">
-      <h1>Prueba Premium gratis 3 meses</h1>
-      <p>
-        Escucha millones de canciones sin anuncios, a la carta y sin conexión.
-      </p>
-      <button>VER PLANES</button>
-      <p>
-        Rigen términos y condiciones. Los tres meses gratis no están disponibles
-        para usuarios que ya hayan probado Premium.
-      </p>
-    </section>
-    <section>
-      <h1>¿ Por qué pasarte a Premium?</h1>
+      <section class="container">
+        <article class="container_up">
+          <h1>Prueba Premium gratis 3 meses</h1>
+          <p>
+            Escucha millones de canciones sin anuncios, a la carta y sin
+            conexión.
+          </p>
+          <button>VER PLANES</button>
+          <p>
+            Rigen términos y condiciones. Los tres meses gratis no están
+            disponibles para usuarios que ya hayan probado Premium.
+          </p>
+        </article>
+        <article class="container_down">
+          <h1>¿ Por qué pasarte a Premium?</h1>
+          <ul>
+            <li>
+              <img src="" alt="" />
+              <h2>Descargar música</h2>
+              <p>Llévala siempre contigo</p>
+            </li>
+            <li>
+              <img src="" alt="" />
+              <h2>Sin anuncios.</h2>
+              <p>Disfruta de música sin interrupciones</p>
+            </li>
+            <li>
+              <img src="" alt="" />
+              <h2>Escucha lo que quieras</h2>
+              <p>Incluso en el móvil</p>
+            </li>
+            <li>
+              <img src="" alt="" />
+              <h2>Salta todas las canciones que quieras.</h2>
+              <p>Simplemente dale a la siguiente.</p>
+            </li>
+          </ul>
+        </article>
+      </section>
+    </main>
+    <footer class="footer">
       <ul>
-        <li>
-          <img src="" alt="" />
-          <h2>Descargar música</h2>
-          <p>Llévala siempre contigo</p>
-        </li>
-        <li>
-          <img src="" alt="" />
-          <h2>Sin anuncios.</h2>
-          <p>Disfruta de música sin interrupciones</p>
-        </li>
-        <li>
-          <img src="" alt="" />
-          <h2>Escucha lo que quieras</h2>
-          <p>Incluso en el móvil</p>
-        </li>
-        <li>
-          <img src="" alt="" />
-          <h2>Salta todas las canciones que quieras.</h2>
-          <p>Simplemente dale a la siguiente.</p>
-        </li>
+        <article class="footer_left">
+          <li>Legal</li>
+          <li>Cookies</li>
+          <li>Información sobre los anuncios</li>
+        </article>
+        <article class="footer_rigth">
+          <li>
+            <img src="" alt="" />
+            España
+          </li>
+          <li>2019 Spotify AB</li>
+        </article>
       </ul>
-    </section>
-    <footer>
-      <ul>
-        <section>
-        <li>Legal</li>
-        <li>Cookies</li>
-        <li>Información sobre los anuncios</li>
-        </section>
-        <section>
-          <img src="" alt="" />
-          España
-        </li>
-        <li>2019 Spotify AB</li>
-        </section>
-      </ul>
-    
-    <li>
+      <li></li>
     </footer>
   </body>
 </html>
